--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.3",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~12.1.3",
     "@angular/compiler": "~12.1.3",
     "@angular/core": "~12.1.3",
     "@angular/forms": "~12.1.3",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~12.1.3",
     "@angular/platform-browser-dynamic": "~12.1.3",
     "@angular/router": "~12.1.3",
-    "rxjs": "~7.2.0",
+    "firebasets": "^1.2.13",
+    "rxjs": "~6.5.3",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
