--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.1.3",
     "@angular/platform-browser-dynamic": "~12.1.3",
     "@angular/router": "~12.1.3",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "firebasets": "^1.2.13",
     "rxjs": "~6.5.3",
     "tslib": "^2.1.0",
