--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test_pull_request:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checout@v2
       - uses: actions/setup-node@v1
